# libOG

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  TODO.md  Tupfile  Tuprules.tup  config.hpp  config.mk  main.c  main.cc
examples/: Async-Io.cxx  Async-Tcp.cxx  Async-Udp.cxx  CMakeLists.txt  Tcp-client.cxx  Tcp-server.cxx  Udp-client.cxx  Udp-server.cxx  tcp_client.cc  tcp_listener.cc  test_function.cc  udp_client.cc
include/net/: ipv4.h
include/og/: Config.hpp  network.hpp
include/og/async/: Driver.hpp  Task.hpp
include/og/async/generic/: IDriver.hpp  IRegistration.hpp  IScheduler.hpp
include/og/base/: NonCopyable.hpp  SystemException.hpp  Umap.hpp
include/og/boss/: Boss1.hpp  IBoss.hpp  ITarget.hpp  IWorker.hpp
include/og/core/: Concern.hpp  Error.hpp  Errors.hpp  RawBuffer.hpp  RawFd.hpp  System.hpp  Tag.hpp  config.hpp  error.hpp  error.txt
include/og/io/: Concern.hpp  IEvent.hpp  IPoll.hpp  ISource.hpp  Internal.hpp  RawBuffer.hpp  SocketHandle.hpp  SourceHandle.hpp  Tag.hpp
include/og/net/: Concern.hpp  Error.hpp  Errors.hpp  Internal.hpp  Internal2.hpp  Ipv4.hpp  Ipv42.hpp  Poll.hpp  Socket.hpp  Socket2.hpp  SocketAddr.hpp  SocketAddr2.hpp  SocketFd.hpp  SocketHandle.hpp  SocketHelper.hpp  SocketIO.hpp  TcpListener.hpp  TcpStream.hpp  UdpSocket.hpp  ipv4.hpp  socket.hpp  sockethandle.hpp  socketimpl.hpp
include/og/net/epoll/: Event.hpp  Event2.hpp  Poll.hpp  Poll2.hpp
include/og/net/generic/: IEvent.hpp  IPoll.hpp  IPoll2.hpp  ISource.hpp  ISource2.hpp
include/og/net/unix/: SocketHelper.hpp  SocketIO.hpp  socketimpl.hpp
include/og/network/: .Socket.hpp.swp  Concern.hpp  Event.hpp  HttpMessage.hpp  IBaseSelector.hpp  IBaseSocket.hpp  Ipv4.hpp  Poll.hpp  Registry.hpp  Selector.hpp  Socket.hpp  SocketHandle.hpp  SocketImplementation.hpp  TcpListener.hpp  TcpSocket.hpp  TcpStream.hpp  Token.hpp  UdpSocket.hpp  reactor.cpp  reactor2.cpp  todo
include/og/network/Http/: Headers.hpp  Message.hpp
include/og/network/http/: Headers.hpp
include/og/network/ip/: Ipv4.hpp
include/og/network/unix/: Selector.hpp  SocketImplementation.hpp
include/og/network/windows/: SocketImplementation.hpp
misc/: main.cc  tcp_client.cc  tcp_listener.cc
og/: Buffer.hpp  Concern.hpp  Error.hpp  Internal.cc  Internal.hpp  Ipv4.cc  Ipv4.hpp  Poll.hpp  RawBuffer.hpp  RawFd.hpp  Socket.cc  Socket.hpp  SocketAddr.cc  SocketAddr.hpp  System.hpp  Tag.hpp  TcpListener.cc  TcpListener.hpp  TcpStream.cc  TcpStream.hpp  UdpSocket.cc  UdpSocket.hpp  defs.hpp  internal.cc  internal.hpp  socket.txt
og/epoll/: Event.cc  Event.hpp  Poll.cc  Poll.hpp
og/generic/: IEvent.hpp  IPoll.hpp  ISource.hpp
og/internal/: unix.cc
scripts/: GetVersion.cmake  Versionner.cmake
src/net/: Tupfile  ipv4.c
src/og/: CMakeLists.txt
src/og/async/: Driver.cc  Tupfile
src/og/base/: CMakeLists.txt  SystemException.cxx  VERSION.txt
src/og/io/: Internal.cc  Tupfile
src/og/net/: Internal.cc  Internal2.cc  Ipv4.cc  Socket.cc  Socket2.cc  SocketAddr.cc  SocketAddr2.cc  TcpListener.cc  TcpStream.cc  Tupfile  UdpSocket.cc  ipv4.cc  socket.cc
src/og/net/common/: SocketIO.cc
src/og/net/epoll/: Event.cc  Event2.cc  Poll.cc  Poll2.cc
src/og/net/poll/: Poll_linux.cc
src/og/net/socket_io/: SocketIO_unix.cc
src/og/net/unix/: SocketHelper.cc  SocketIO.cc  socketimpl.cc
src/og/network/: .Socket.cxx.swp  CMakeLists.txt  Event.cxx  Ipv4.cxx  Poll.cxx  Selector.hpp  Socket.cxx  SocketImplementation.hpp  TcpListener.cxx  TcpSocket.cxx  TcpStream.cxx  UdpSocket.cxx  wanted_hierarchy
src/og/network/Http/: Headers.cxx
src/og/network/http/: Headers.cxx
src/og/network/ip/: Ipv4.cxx
src/og/network/unix/: .SocketImplementation.cpp.swp  .SocketImplementation.hpp.swp  Selector.cxx  Selector.hpp  SocketImplementation.cpp  SocketImplementation.cxx  SocketImplementation.hpp
src/og/network/windows/: SocketImplementation.cxx  SocketImplementation.hpp
t/: Tuprules.tup
t/net/: Tupfile  ipv4.c  ipv4.t
tests/: driver_test.cc
